refactor: remove react-virtual lib

--- a/src/entities/team/ui/TeamSchedule/TeamScheduleList/TeamScheduleList.module.css
+++ b/src/entities/team/ui/TeamSchedule/TeamScheduleList/TeamScheduleList.module.css
@@ -1,5 +1,8 @@
 .root {
-  position: relative;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 12px;
+  overflow: hidden;
   margin: 0;
 }
